--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,16 @@
 
 @tailwind base;
 @layer base {
-  * {
-    @apply font-monda;
-  }
-
   :root {
     color-scheme: dark;
     --primary: #222831;
     --secondary: #eeeeee;
     --accent: #f6b17a;
     --neutral: #31363f;
+  }
+
+  * {
+    @apply font-monda;
   }
 
   ::selection {
@@ -33,4 +33,18 @@
 }
 
 @tailwind components;
+@layer components {
+  .logo {
+    @apply text-2xl font-zen-dots tracking-widest uppercase font-bold leading-none -mb-1 text-accent;
+  }
+
+  .icon-neutral {
+    @apply hover:animate-pulse active:scale-95 bg-neutral fill-secondary p-2.5 rounded-lg;
+  }
+
+  .icon-accent {
+    @apply hover:animate-pulse active:scale-95 bg-accent p-2.5 rounded-lg fill-primary;
+  }
+}
+
 @tailwind utilities;
