--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Monda:wght@400..700&family=Zen+Dots&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Zen+Dots&display=swap");
 
 @tailwind base;
 @layer base {
@@ -7,12 +7,12 @@
     --black: #000000;
     --blue: #006ce7;
     --gray: #eeeeee;
-    --monda: "Monda", "sans-serif", "system-ui";
+    --nunito-sans: "Nunito Sans", "sans-serif", "system-ui";
     --zen-dots: "Zen Dots", "sans-serif", "system-ui";
   }
 
   * {
-    font-family: var(--monda) !important;
+    font-family: var(--nunito-sans) !important;
   }
 
   .font-zen-dots {
@@ -50,6 +50,34 @@
 
   .icon {
     @apply transition-all active:scale-90 rounded-lg size-8 flex flex-col items-center justify-center;
+  }
+
+  .h1 {
+    @apply text-4xl font-bold leading-tight;
+  }
+
+  .h2 {
+    @apply text-3xl font-bold leading-tight;
+  }
+
+  .h3 {
+    @apply text-2xl font-bold leading-tight;
+  }
+
+  .h4 {
+    @apply text-xl leading-tight;
+  }
+
+  .p {
+    @apply text-lg text-black/60 leading-normal;
+  }
+
+  .wrapper {
+    @apply max-w min-h flex flex-col items-center;
+  }
+
+  .wrapper-center {
+    @apply wrapper justify-center;
   }
 }
 
