--- a/src/index.css
+++ b/src/index.css
@@ -65,11 +65,11 @@
   }
 
   .h1 {
-    @apply text-4xl font-bold leading-tight;
+    @apply md:text-4xl text-3xl font-bold leading-tight;
   }
 
   .text {
-    @apply md:text-lg text-base text-black/60 leading-snug;
+    @apply md:text-lg text-base leading-snug;
   }
 
   .input {
