--- a/src/index.css
+++ b/src/index.css
@@ -88,3 +88,11 @@
 .tox .tox-statusbar {
   border-top: 1.5px solid #0000001a !important;
 }
+
+.tox .tox-mbtn {
+  font-size: 1rem !important;
+
+  @media (max-width: 640px) {
+    font-size: 0.875rem !important;
+  }
+}
